@startuml

title __ISENCE.APP's Class Diagram__\n

  namespace com.google.isence {
    class com.google.isence.BarcodeScanner {
    }
  }
  

  namespace com.google.isence {
    class com.google.isence.BuildConfig {
    }
  }
  

  namespace com.google.isence {
    class com.google.isence.Dash {
    }
  }
  

  namespace com.google.isence {
    class com.google.isence.Emulate {
    }
  }
  

  namespace com.google.isence {
    class com.google.isence.History {
    }
  }
  

  namespace com.google.isence {
    class com.google.isence.LocationService {
    }
  }
  

  namespace com.google.isence {
    class com.google.isence.MainActivity {
    }
  }
  

  namespace com.google.isence {
    class com.google.isence.MapsActivity {
    }
  }
  

  namespace com.google.isence {
    class com.google.isence.Master {
    }
  }
  

  namespace com.google.isence {
    class com.google.isence.Profile {
    }
  }
  

  namespace com.google.isence {
    class com.google.isence.Search {
    }
  }
  

  namespace com.google.isence {
    class com.google.isence.Vehicle {
    }
  }
  

  namespace com.google.isence {
    class com.google.isence.VehicleLocation {
    }
  }
  

  com.google.isence.BarcodeScanner .up.|> me.dm7.barcodescanner.zxing.ZXingScannerView.ResultHandler
  com.google.isence.BarcodeScanner -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isence.Dash -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isence.Emulate -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isence.History -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isence.LocationService -up-|> android.app.Service
  com.google.isence.LocationService o-- com.google.isence.LocationService.MyLocationListener : listener
  com.google.isence.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isence.MapsActivity .up.|> com.google.android.gms.maps.OnMapReadyCallback
  com.google.isence.MapsActivity -up-|> androidx.fragment.app.FragmentActivity
  com.google.isence.Master -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isence.Profile -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isence.Search -up-|> androidx.appcompat.app.AppCompatActivity
  com.google.isence.Vehicle -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
